--- a/index.html
+++ b/index.html
@@ -1,83 +1,131 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Rohan Mengle Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="icon" href="">
-    <!-- bootstrap cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" href="images/logo.png">
+  <title>Rohan Mengle</title>
 
-    <!-- Other elements in head -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
 
-    <div>
-        <div class="intro-text"><b>hi, i am 
-            <br><span id="name"></span></b>
-        </div>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+  <div class="container">
+    <a class="navbar-brand" href="#home">Rohan Mengle</a>
+    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="nav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+        <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+        <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-        <div class="summary">
-            <span>Software Developer</span><br>
-        </div>
+<!-- HERO -->
+<section id="home" class="hero">
+  <div class="container">
+    <h1>Hi, I’m Rohan.</h1>
+    <p class="lead">
+      Researcher and software engineer interested in compilers, systems, and low level computing. 
+    </p>
+  </div>
+</section>
 
-        <div class="social-links">
-            <a href="https://github.com/Megz-Mugz" target="_blank"><i class="fab logo fa-github"></i></a>
-            <a href="mailto:rohan.mengle123@gmail.com"><i class="fas logo fa-envelope"></i></a>            
-        </div>
+<!-- PROJECTS -->
+<section id="projects" class="section alt">
+  <div class="container narrow">
+    <h2>Projects</h2>
+
+    <div class="project">
+      <h3>In-Memory Database Engine</h3>
+      <span class="muted">C++ Compiler Project</span>
+
+      <p>
+        Designed and implemented an in-memory database engine focusing on low-level data structures,
+        query parsing, and execution logic. Emphasized performance, correctness, and clean system design
+        inspired by real-world database internals.
+      </p>
+
+      <a class="btn btn-outline-light" href="https://github.com/Megz-Mugz/Medjo" target="_blank">
+        View Project
+      </a>
+    </div>
+  </div>
+</section>
+
+<!-- EXPERIENCE -->
+<section id="experience" class="section">
+  <div class="container narrow">
+    <h2>Experience</h2>
+
+    <div class="item">
+      <h4>George Mason University - Graduate Researcher</h4>
+      <span class="muted">August 2025 – Present</span>
+      <p>Developed and maintained internal and external client projects using Ruby on Rails.</p>
     </div>
 
-    <!-- New section for skills and work experience -->
-    
+    <div class="item">
+      <h4>Solution Street — Software Engineer Intern</h4>
+      <span class="muted">Mar 2024 – Jan 2026</span>
+      <p>Developed and maintained internal and external client projects using Ruby on Rails.</p>
+    </div>
 
+    <div class="item">
+      <h4>Undergraduate Teaching Assistant</h4>
+      <span class="muted">SWE 437, CS 262</span>
+    </div>
+  </div>
+</section>
 
-    <div id="three-container"></div>
-    <!-- Your navbar code here -->
+<!-- SKILLS -->
+<section id="skills" class="section alt">
+  <div class="container narrow">
+    <h2>Skills</h2>
 
-    <!-- Include THREE.js and Vanta.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.dots.min.js"></script>
+    <p><strong>Languages:</strong> C++, Java, Python, JavaScript, C</p>
+    <p><strong>Tools:</strong> Git, Docker, Kubernetes, React, MongoDB, Flask, Django</p>
+  </div>
+</section>
 
-    <nav class="navbar navbar-expand-lg navbar-light navbar-transparent">
-        
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img id="navbar-logo" src="images/logo.png" width="80" height="80" alt="">
-              </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="aboutMe.html">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<!-- EDUCATION -->
+<section id="education" class="section">
+  <div class="container narrow">
+    <h2>Education</h2>
 
-    <!-- Initialize Vanta.js with dots effect -->
-    <script>
-        VANTA.DOTS({
-            el: "#three-container",
-            color: 0xffffff,
-            backgroundColor: 0x072541
-            // Additional customization options
-        });
-    </script>
+    <p>
+      <strong>George Mason University (Expected Graduation: June 2027)</strong><br>
+      M.S. Computer Science<br>
+      B.S. Applied Computer Science
+    </p>
 
+    <p class="muted">
+      Relevant coursework: Compilers, Computer Architecture, Operating Systems, Data Structures, Algorithms
+    </p>
+  </div>
+</section>
 
-    <!-- bootstrap javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<!-- Footer -->
+<footer class="footer">
+  <div class="container text-center">
+    <p>© 2025 Rohan Mengle</p>
+  </div>
+</footer>
 
-    <script src="app.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
